Recogiendo las alarmas

--- a/app/src/main/res/layout/activity_workers_list.xml
+++ b/app/src/main/res/layout/activity_workers_list.xml
@@ -26,6 +26,12 @@
             android:text="Alarms"
             android:textSize="24sp" />
 
+        <TextView
+            android:id="@+id/textView22"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
