Alarmas recogidas falta mandar ack y clear

--- a/app/src/main/res/layout/activity_workers_list.xml
+++ b/app/src/main/res/layout/activity_workers_list.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/front">
 
         <Button
             android:id="@+id/button3"
@@ -26,12 +27,18 @@
             android:text="Alarms"
             android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/textView22"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/front">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerView2"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
